[metadata]
name = py-lorem-picsum-erihak96
version = 0.0.1
author = Erik Hakansson
description = 0-dependency CLI tool for downloading images. Useful for image classification tasks. 
long_description = file: README.md
url = https://github.com/Expan75/py-lorem-picsum
project_urls =
    Bug Tracker = https://github.com/Expan75/py-lorem-picsum/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src